# quadcopter_state_estimation

./: .gitignore  CMakeLists.txt  README.md
include/: CExtendedKalmanFilter.h  ExtendedKalmanFilter.h  simulation.h
sim/: .mavic_2_pro.wbproj
sim/protos/: Mavic2Pro.proto
sim/worlds/: .mavic_2_pro.wbproj  mavic_2_pro.wbt
src/: CExtendedKalmanFilter.cpp  main.cpp
